2002-09-20  olicha  <olivier.chapuis@free.fr>

	* fvwm/menus.c (get_menu_repaint_transparent_parameters):
	(animated_move_back):
	(pop_menu_up):
	(repaint_transparent_menu):
	* fvwm/move_resize.c (AnimatedMoveOfWindow):
	(AnimatedMoveAnyWindow):
	* fvwm/move_resize.h:
	Support the new colorset transparent options. Fixed greyed item
	of transparent animated menus

2002-09-19  olicha  <olivier.chapuis@free.fr>

	* fvwm/menus.c (get_menu_repaint_transparent_parameters):
	(animated_move_back):
	(pop_menu_up):
	(repaint_transparent_menu):
	* fvwm/move_resize.c (AnimatedMoveOfWindow):
	(AnimatedMoveAnyWindow):
	* fvwm/move_resize.h:
	Support the new colorset transparent options and fix greyed item
	of transparent animated menus
	
	* fvwm/menus.c (pop_menu_up): 
	(animated_move_back):

	* libs/Rectangles.c:
	* libs/Rectangles.h:
	* libs/Makefile.am:
	New libs files for rectangles, segments, regions ..etc
	
	* fvwm/menus.c (clear_expose_menu_area):
	(get_menu_paint_item_parameters):
	(paint_menu):
	(select_menu_item):
	(ParentalMenuRePaint):
	(ParentalMenuRePaint):
	* fvwm/menuitem.c (clear_menu_item_background):
	(menuitem_paint):
	* fvwm/menuitem.h (MenuPaintItemParameters):
	Clip the item icons and text drawing

	* fvwm/menus.c (__mloop_exit):
	Fixed an indirect uninitialized variable bug

	* fvwm/menus.c (__mloop_handle_event): *
	(__mloop_handle_action_with_mi): *
	Update some comments

	* libs/FRender.c (FRenderVisualInit):
	(FRenderRender):
	* fvwm/colorset.c (parse_colorset):
	Small clean up

2002-09-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (__menu_loop):
	(__mloop_handle_action_with_mi):
	fixed parent menu redrawing

	* fvwm/style.c (check_window_style_change):
	* fvwm/update.c (apply_window_updates):
	* fvwm/add_window.c (setup_icon_size_limits):
	honour changes in IconSize style without recapture

	* fvwm/focus.c (focus_query_open_grab_focus):
	* fvwm/events.c (HandlePropertyNotify):
	* fvwm/add_window.c (setup_transientfor):