@@ -52,6 +52,8 @@ static FRenderPictFormat *PFrenderDirectFormat = NULL;
 static FRenderPictFormat *PFrenderAbsoluteFormat = NULL;
 Bool FRenderVisualInitialized = False;
 
+/* #define USE_ABSOLUTE_FORMAT 1*/
+
 /* ---------------------------- exported variables (globals) ---------------- */
 
 /* ---------------------------- local functions ----------------------------- */
@@ -163,7 +165,200 @@ void FRenderVisualInit(Display *dpy)
 	}
 }
 
+static
+Bool FRenderTintPicture(
+	Display *dpy, Window win, Pixel tint, int tint_percent,
+	FRenderPicture dest_picture, int dest_x, int dest_y, int dest_w,
+	int dest_h)
+{
+	static FRenderColor frc_tint;
+	static Pixel saved_tint;
+	static int saved_tint_percent;
+	static Pixmap tint_pixmap = None;
+	static FRenderPicture shade_picture = None;
+	static FRenderPicture tint_picture = None;
+#ifndef USE_ABSOLUTE_FORMAT
+	static FRenderColor frc_shade;
+	static Pixmap shade_pixmap = None;
+#endif
+	Bool force_update = False;
+	FRenderPictureAttributes  pa;
+	int rv = 0;
+
+	if (!XRenderSupport || !FRenderGetExtensionSupported())
+	{
+		return 0;
+	}
+
+	if (!FRenderVisualInitialized)
+	{
+		FRenderVisualInitialized = True;
+		FRenderVisualInit(dpy);
+	}
+
+	if (!PFrenderVisualFormat ||
+#ifdef USE_ABSOLUTE_FORMAT
+	    !PFrenderAbsoluteFormat
+#else
+	    !PFrenderAlphaFormat || !PFrenderDirectFormat
+#endif
+		)
+	{
+		return 0;
+	}
+
+#ifdef USE_ABSOLUTE_FORMAT
+	if (!tint_pixmap || !tint_picture)
+	{
+		if (win == None)
+		{
+			win = RootWindow(dpy, DefaultScreen(dpy));
+		}
+		pa.repeat = True;
+		if (!tint_pixmap)
+		{
+			tint_pixmap = XCreatePixmap(dpy, win, 1, 1, 32);
+		}
+		if (tint_pixmap)
+		{
+			tint_picture = FRenderCreatePicture(
+				dpy, tint_pixmap,
+				PFrenderAbsoluteFormat,
+				FRenderCPRepeat, &pa);
+			if (!tint_picture)
+			{
+				goto bail;
+			}
+		}
+		else
+		{
+			goto bail;
+		}
+		force_update = True;
+	}
+	if (tint_picture && 
+	    (tint != saved_tint || tint_percent != saved_tint_percent
+	     || force_update))
+	{
+		XColor color;
+		float alpha_factor = (float)tint_percent/100;
+
+		force_update = False;
+		color.pixel = tint;
+		XQueryColor(dpy, Pcmap, &color);
+		frc_tint.red = color.red * alpha_factor;
+		frc_tint.green = color.green * alpha_factor;
+		frc_tint.blue = color.blue * alpha_factor;
+		frc_tint.alpha = 0xffff * alpha_factor;
+		FRenderFillRectangle(
+			dpy, FRenderPictOpSrc, tint_picture, &frc_tint,
+			0, 0, 1, 1);
+		saved_tint = tint;
+	}
+#else
+	if (tint_pixmap == None)
+	{
+		pa.repeat = True;
+		tint_pixmap = XCreatePixmap(dpy, win, 1, 1, 24);
+		if (!tint_pixmap)
+		{
+			goto bail;
+		}
+		tint_picture = FRenderCreatePicture(
+			dpy, tint_pixmap, PFrenderDirectFormat, FRenderCPRepeat,
+			&pa);
+		if (!tint_picture)
+		{
+			goto bail;
+		}
+		shade_pixmap = XCreatePixmap(dpy, win, 1, 1, 8);
+		if (!shade_pixmap)
+		{
+			goto bail;
+		}
+		shade_picture = FRenderCreatePicture(
+			dpy, shade_pixmap, PFrenderAlphaFormat, FRenderCPRepeat,
+			&pa);
+		if (!shade_picture)
+		{
+			goto bail;
+		}
+		force_update = True;
+	}
+
+	if (tint_percent != saved_tint_percent || force_update)
+	{
+		if (win == None)
+		{
+			win = RootWindow(dpy, DefaultScreen(dpy));
+		}
+		frc_shade.red = 0;
+		frc_shade.green = 0;
+		frc_shade.blue = 0;
+		frc_shade.alpha = 0xffff * tint_percent/100;
+		FRenderFillRectangle(
+			dpy, FRenderPictOpSrc, shade_picture, &frc_shade,
+			0, 0, 1, 1);
+		saved_tint_percent = tint_percent;
+	}
+
+	if (tint != saved_tint || force_update)
+	{
+		XColor color;
+
+		if (win == None)
+		{
+			win = RootWindow(dpy, DefaultScreen(dpy));
+		}
+		color.pixel = tint;
+		XQueryColor(dpy, Pcmap, &color);
+		frc_tint.red = color.red;
+		frc_tint.green = color.green;
+		frc_tint.blue = color.blue;
+		frc_tint.alpha = 0xffff;
+		FRenderFillRectangle (
+			dpy, FRenderPictOpSrc, tint_picture,
+			&frc_tint, 0, 0, 1, 1);
+		saved_tint = tint;
+	}
+#endif
+
+	FRenderComposite(dpy,
+			 FRenderPictOpOver,
+			 tint_picture,
+			 shade_picture,
+			 dest_picture,
+			 0, 0, 0, 0, dest_x, dest_y, dest_w, dest_h);
+	rv = 1;
+
+ bail:
+	return rv;
+}
+
 /* ---------------------------- interface functions ------------------------- */
+
+
+Bool FRenderTintRectangle(
+	Display *dpy, Window win, Pixmap mask, Pixel tint, int shade_percent,
+	Drawable d, int dest_x, int dest_y, int dest_w, int dest_h)
+{
+	FRenderPicture dest_picture = None;
+	FRenderPictureAttributes  pa;
+
+	pa.clip_mask = mask;
+	if (!(dest_picture = FRenderCreatePicture(
+		dpy, d, PFrenderVisualFormat, FRenderCPClipMask, &pa)))
+	{
+		return 0;
+	}
+
+	FRenderTintPicture(
+		dpy, win, shade_percent, tint, dest_picture, dest_x, dest_y,
+		dest_w, dest_h);
+
+	FRenderFreePicture(dpy, dest_picture);
+	return 1;
+}
 
 int FRenderRender(
 	Display *dpy, Window win, Pixmap pixmap, Pixmap mask, Pixmap alpha,
@@ -176,10 +371,6 @@ int FRenderRender(
 	static Pixmap shade_pixmap = None;
 	static FRenderPicture shade_picture = None;
 	static int saved_added_alpha_percent = 0;
-	static Pixel saved_tint = 0;
-	static Pixmap tint_pixmap = None;
-	static FRenderPicture tint_picture = None;
-	static int saved_tint_percent = 0;
 	FRenderColor frc;
 	Pixmap pixmap_copy = None, alpha_copy = None;
 	FRenderPicture alpha_picture = None, mask_picture = None;
@@ -210,24 +401,9 @@ int FRenderRender(
 	/* it is a bitmap ? */
 	if (Pdepth != depth && pixmap)
 	{
-		pixmap_copy = XCreatePixmap(dpy, win, src_w, src_h, Pdepth);
-		if (gc == None)
-		{
-			XGCValues gcv;
-
-			gc = fvwmlib_XCreateGC(dpy, d, 0, NULL);
-			gcv.foreground = WhitePixel(dpy, DefaultScreen(dpy));
-			gcv.background = BlackPixel(dpy, DefaultScreen(dpy));
-			XChangeGC(dpy, gc, GCBackground|GCForeground, &gcv);
-			free_gc = True;
-		}
-		if (pixmap_copy && gc)
-		{
-			XCopyPlane(
-				dpy, pixmap, pixmap_copy, gc,
-				src_x, src_y, src_w, src_h,
-				0, 0, 1);
-		}
+		pixmap_copy = PictureBitmapToPixmap(
+			dpy, win, pixmap, Pdepth, gc, src_x, src_y, src_w,
+			src_h);
 		src_x = src_y = 0;
 	}
 
@@ -240,6 +416,11 @@ int FRenderRender(
 	{
 		pa.repeat = False;
 	}
+
+	/*
+	 * build a the src_picture
+	 */
+
 	if (pixmap == DefaultRootWindow(dpy))
 	{
 		pam |= FRenderCPSubwindowMode;
@@ -261,121 +442,73 @@ int FRenderRender(
 		src_x = src_y = 0;
 		pam &= ~FRenderCPSubwindowMode;
 	}
-
-	if (!src_picture && tint_percent <= 0 && (pixmap_copy || pixmap) &&
-	    pixmap != ParentRelative)
+	else if (pixmap == ParentRelative)
 	{
-		src_picture = FRenderCreatePicture(
-			dpy,
-			(pixmap_copy != None)? pixmap_copy:pixmap,
-			PFrenderVisualFormat, pam, &pa);
-	}
-	else
-	{
-		if (!tint_pixmap || !tint_picture)
-		{
-			if (win == None)
-			{
-				win = RootWindow(dpy, DefaultScreen(dpy));
-			}
-			e_pa.repeat = True;
-			if (!tint_pixmap)
-			{
-				tint_pixmap = XCreatePixmap(
-					dpy, win, 100, 100, 32);
-			}
-			if (tint_pixmap)
-			{
-				tint_picture = FRenderCreatePicture(
-					dpy, tint_pixmap,
-					PFrenderAbsoluteFormat,
-					FRenderCPRepeat, &e_pa);
-				if (!tint_picture)
-				{
-					goto bail;
-				}
-			}
-			else
-			{
-				goto bail;
-			}
-			force_update = True;
-		}
-		if (tint_picture && 
-		    (tint != saved_tint || tint_percent != saved_tint_percent
-		     || force_update))
-		{
-			XColor color;
-			float alpha_factor = (float)tint_percent/100;
-
-			force_update = False;
-			color.pixel = tint;
-			XQueryColor(dpy, Pcmap, &color);
-			frc.red = color.red * alpha_factor;
-			frc.green = color.green * alpha_factor;
-			frc.blue = color.blue * alpha_factor;
-			frc.alpha = 0xffff * alpha_factor;
-			FRenderFillRectangle(
-				dpy, FRenderPictOpSrc, tint_picture, &frc,
-				0, 0, 100, 100);
-			saved_tint = tint;
-		}
+		/* need backing store and good preparation of the win */
 		if (win == None)
 		{
 			win = RootWindow(dpy, DefaultScreen(dpy));
 		}
-		
+		if (gc == None)
+		{
+			gc = fvwmlib_XCreateGC(dpy, pixmap, 0, NULL);
+			free_gc = True;
+		}
+		pixmap_copy = XCreatePixmap(dpy, win, src_w, src_h, Pdepth);
+		if (pixmap_copy && gc)
+		{
+			XCopyArea(dpy, win,
+				  pixmap_copy, gc,
+				  src_x, src_y, src_w, src_h, 0, 0);
+		}
+	}
+	else if (tint_percent > 0 && !pixmap_copy)
+	{
+		if (win == None)
+		{
+			win = RootWindow(dpy, DefaultScreen(dpy));
+		}
+		if (gc == None)
+		{
+			gc = fvwmlib_XCreateGC(dpy, pixmap, 0, NULL);
+			free_gc = True;
+		}
+		pixmap_copy = XCreatePixmap(dpy, win, src_w, src_h, Pdepth);
+		if (pixmap_copy && gc)
+		{
+			XCopyArea(
+				dpy, pixmap, pixmap_copy, gc,
+				src_x, src_y, src_w, src_h, 0, 0);
+		}
+		src_x = src_y = 0;
+	}
+	else
+	{
+		src_picture = FRenderCreatePicture(
+			dpy, pixmap, PFrenderVisualFormat, pam, &pa);	
+	}
 
-		if (pixmap_copy == None && pixmap)
-		{
-			if (gc == None)
-			{
-				gc = fvwmlib_XCreateGC(dpy, pixmap, 0, NULL);
-				free_gc = True;
-			}
-			pixmap_copy = XCreatePixmap(
-				dpy, win, src_w, src_h, Pdepth);
-			if (pixmap_copy && gc)
-			{
-				XCopyArea(
-					dpy,
-					(pixmap == ParentRelative)? win:pixmap,
-					pixmap_copy, gc,
-					src_x, src_y, src_w, src_h, 0, 0);
-			}
-		}
-
-		if (pixmap_copy && !src_picture)
-		{
-			src_picture = FRenderCreatePicture(
-				dpy, pixmap_copy, PFrenderVisualFormat,
-				pam, &pa);
-		}
-		else if (!pixmap)
-		{
-			src_picture = tint_picture;
-		}
-		if (pixmap != ParentRelative)
-		{
-			src_x = src_y = 0;
-		}
-		if (tint_picture && src_picture && pixmap)
-		{
-			FRenderComposite(
-				dpy, FRenderPictOpOver, tint_picture, None,
-				src_picture, 0, 0, 0, 0,
-				src_x, src_y, src_w, src_h);
-		}
+	if (!src_picture && pixmap_copy)
+	{
+		src_picture = FRenderCreatePicture(
+			dpy, pixmap_copy, PFrenderVisualFormat, pam, &pa);
 	}
 
 	if (free_gc && gc)
 	{
 		XFreeGC(dpy, gc);
 	}
-
 	if (!src_picture)
 	{
 		goto bail;
+	}
+
+	/* tint */
+	if (tint_percent > 0)
+	{
+		FRenderTintPicture(
+			dpy, win, tint, tint_percent, src_picture,
+			src_x, src_y, src_w, src_h);
 	}
 
 	if (added_alpha_percent >= 100)
@@ -516,7 +649,7 @@ int FRenderRender(
 	{
 		FRenderFreePicture(dpy, dest_picture);
 	}
-	if (src_picture && src_picture != tint_picture)
+	if (src_picture)
 	{
 		FRenderFreePicture(dpy, src_picture);
 	}
